--- a/src/blocks/auth/auth.css
+++ b/src/blocks/auth/auth.css
@@ -1,6 +1,5 @@
-.page {
-  max-width: 100%;
-  min-height: 100vh;
+.auth {
+  max-width: 358px;
   font-family:'Inter', 'Helvetica Neue', Arial, sans-serif;
   color: #FFFFFF;
   margin: 0 auto;
