--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,14 @@
 @import url(./blocks/popup/__input-error/popup__input-error.css);
 @import url(./blocks/popup/__delete-heading/popup__delete-heading.css);
 @import url(./blocks/popup/__delete-container/popup__delete-container.css);
+
+/* auth */
+
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/__button/auth__button.css);
+@import url(./blocks/auth/__form/auth__form.css);
+@import url(./blocks/auth/__heading/auth__heading.css);
+@import url(./blocks/auth/__imput/auth__imput.css);
+@import url(./blocks/auth/__login-link/auth__login-link.css);
+@import url(./blocks/auth/__sign-ip-text/auth__sign-ip-text.css);
+@import url(./blocks/auth/__sign-up/auth__sign-up.css);
