Реализована регистрация и авторизация пользователя

--- a/src/blocks/auth/__imput/auth__imput.css
+++ b/src/blocks/auth/__imput/auth__imput.css
@@ -1,5 +1,5 @@
 .auth__imput {
-  color: white;
+  color: #CCCCCC;
   width: 100%;
   margin-bottom: 30px;
   font-weight: 400;
@@ -8,6 +8,7 @@
   min-height: 27px;
   background-color: black;
   border: none;
-  border-bottom: 1px solid white;
+  border-bottom: 2px solid #CCCCCC;
   outline: 0;
+  padding: 0 0 2px;
 }
