--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,11 @@
 @import url(./blocks/auth/__login-link/auth__login-link.css);
 @import url(./blocks/auth/__sign-ip-text/auth__sign-ip-text.css);
 @import url(./blocks/auth/__sign-up/auth__sign-up.css);
+@import url(./blocks/popup/__auth-heading/popup__auth-heading.css);
+@import url(./blocks/popup/__auth-image/popup__auth-image.css);
+@import url(./blocks/popup/__auth-image/_type/popup__auth_type-image_correct.css);
+@import url(./blocks/popup/__auth-image/_type/popup__auth-image_type_incorrect.css);
+@import url(./blocks/header/__auth-link/header__auth-link.css);
+@import url(./blocks/header/__container/header__container.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__logout/header__logout.css);
