--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,7 @@
   max-width: 880px;
   margin: 0 auto;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: end;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
