--- a/src/blocks/popup/__container/_type/popup____container_type_image.css
+++ b/src/blocks/popup/__container/_type/popup____container_type_image.css
@@ -1,11 +1,11 @@
-.popup__image-container {
+.popup____container_type_image {
   margin: 0 80px;
   padding: 0;
   position: fixed;
 }
 
 @media screen and (max-width: 600px) {
-  .popup__image-container {
+  .popup____container_type_image {
     margin: 0 40px;
   }
 }
