--- a/src/blocks/popup/__container/_type/popup__container_type_confirm.css
+++ b/src/blocks/popup/__container/_type/popup__container_type_confirm.css
@@ -1,4 +1,4 @@
-.popup__delete-container {
+.popup__container_type_confirm {
   max-width: 358px;
   margin: 0;
   display: flex;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 320px) {
-  .popup__delete-container {
+  .popup__container_type_confirm {
     max-width: 238px;
   }
 }
